--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,23 +9,33 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "Experience"
+  url = "#experience"
   weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
+  name = "Publications"
+  url = "#publications"
   weight = 30
 
 [[main]]
-  name = "Publications"
-  url = "#featured"
+  name = "Talks & Workshops"
+  url = "#tw"
   weight = 40
+  
+[[main]]
+  name = "Projects"
+  url = "#projects"
+  weight = 20
+  
+[[main]]
+  name = "Teaching"
+  url = "#teaching"
+  weight = 20
 
 [[main]]
-  name = "Contact"
-  url = "#contact"
+  name = "Skills"
+  url = "#skills"
   weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
