--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -259,7 +259,7 @@ plugins_js  = []
 ############################
 ## Maps
 ############################
-#[map]
+[map]
   # To show your address on a map in the Contact widget, enter your latitude and longitude (above)
   # and choose a map provider below.
   #
@@ -274,7 +274,7 @@ plugins_js  = []
   #   1: Google Maps
   #   2: OpenStreetMap (Mapnik)
   #   3: OpenStreetMap (Mapbox)
- # engine = 2
+  engine = 0
  # api_key = ""
  # zoom = 15
 
