--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -24,8 +24,8 @@
   weight = 40
 
 [[main]]
-  name = "Talks & Workshops"
-  url = "#tw"
+  name = "Accomplishments"
+  url = "#accomplishments"
   weight = 50
   
 [[main]]
