--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,24 +14,24 @@
   weight = 20
 
 [[main]]
+  name = "Accomplishments"
+  url = "#accomplishments"
+  weight = 30
+
+[[main]]
   name = "Experience"
   url = "#experience"
-  weight = 30
+  weight = 50
 
 #[[main]]
 #  name = "Publications"
 #  url = "#publications"
 #  weight = 40
-
-[[main]]
-  name = "Accomplishments"
-  url = "#accomplishments"
-  weight = 50
   
-[[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 60
+#[[main]]
+#  name = "Projects"
+#  url = "#projects"
+#  weight = 60
   
 #[[main]]
 #  name = "Teaching"
